can toggle attaching final chunk

--- a/TrackEditor/MainWindow.ui
+++ b/TrackEditor/MainWindow.ui
@@ -61,7 +61,7 @@
       <item>
        <widget class="QPushButton" name="pbDelete">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>Delete</string>
