--- a/TrackEditor/EditGeometryWidget.ui
+++ b/TrackEditor/EditGeometryWidget.ui
@@ -23,7 +23,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-301</y>
+        <y>-260</y>
         <width>440</width>
         <height>1127</height>
        </rect>
@@ -197,7 +197,7 @@
            </widget>
           </item>
           <item row="0" column="4" rowspan="4">
-           <widget class="QPushButton" name="pbEditRLOWall_3">
+           <widget class="QPushButton" name="pbEditOFloor">
             <property name="text">
              <string>Edit</string>
             </property>
@@ -776,7 +776,7 @@
            </widget>
           </item>
           <item row="0" column="4" rowspan="2">
-           <widget class="QPushButton" name="pbEditRLOWall_2">
+           <widget class="QPushButton" name="pbEditRUOWall">
             <property name="text">
              <string>Edit</string>
             </property>
